Add CSS builder

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 
 		<!-- Kalita CSS -->
-		<link href="style.css" rel="stylesheet" />
+		<link href="build/style.css" rel="stylesheet" />
 
 		<title>Kalita</title>
 	</head>
@@ -16,6 +16,6 @@
 		<div id="kalita-player"></div>
 
 		<!-- Kalita JavaScript -->
-		<script src="bundle.js"></script>
+		<script src="build/bundle.js"></script>
 	</body>
 </html>
